{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 47,
  "lineage": "a51bcf7c-40e3-b2d6-f0ac-ee1c76f49f4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab04-eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0886978a1b2c70fef",
            "association_id": "eipassoc-0fba6a7f5bc3a4564",
            "domain": "vpc",
            "id": "eipalloc-0886978a1b2c70fef",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04b35c69bd0269401",
            "private_dns": "ip-10-0-0-72.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.72",
            "public_dns": "ec2-13-213-177-90.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.177.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001fa93c238ad15db",
            "association_id": "eipassoc-0dda84889039a2ebb",
            "domain": "vpc",
            "id": "eipalloc-001fa93c238ad15db",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0ab824da2a585f663",
            "private_dns": "ip-10-0-1-89.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-13-215-242-138.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.242.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7641fb4c8ea117a",
            "association_id": "eipassoc-08b86431ef688471a",
            "domain": "vpc",
            "id": "eipalloc-0d7641fb4c8ea117a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-06b431e533a1a9f8b",
            "private_dns": "ip-10-0-2-139.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.139",
            "public_dns": "ec2-18-143-7-158.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.7.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab04-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:internet-gateway/igw-0abd03b95403a778e",
            "id": "igw-0abd03b95403a778e",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab04-igw"
            },
            "tags_all": {
              "Name": "lab04-igw"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab04-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/fb425aeb39eabe33",
            "arn_suffix": "app/lab04-alb/fb425aeb39eabe33",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab04-alb-2074635167.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/fb425aeb39eabe33",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab04-alb",
            "security_groups": [
              "sg-0d99ed8b73fc04643"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f1c37fbbe36d1e4"
              },
              {
                "subnet_id": "subnet-06ba41c814e38bd3e"
              },
              {
                "subnet_id": "subnet-07d6f6e03c9283169"
              }
            ],
            "subnets": [
              "subnet-02f1c37fbbe36d1e4",
              "subnet-06ba41c814e38bd3e",
              "subnet-07d6f6e03c9283169"
            ],
            "tags": {
              "Environment": "PRD"
            },
            "tags_all": {
              "Environment": "PRD"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab04-alb-front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/fb425aeb39eabe33/7a280830d0aa7611",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/4e6a284f5810d530",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/fb425aeb39eabe33/7a280830d0aa7611",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:loadbalancer/app/lab04-alb/fb425aeb39eabe33",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab04-alb",
            "aws_lb_target_group.lab04-alb-target-group",
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lab04-alb-listener-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/4e6a284f5810d530",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener-rule/app/lab04-alb/fb425aeb39eabe33/7a280830d0aa7611/e3a2b6b1acdebaae",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener-rule/app/lab04-alb/fb425aeb39eabe33/7a280830d0aa7611/e3a2b6b1acdebaae",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:listener/app/lab04-alb/fb425aeb39eabe33/7a280830d0aa7611",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lab04-alb",
            "aws_lb_listener.lab04-alb-front_end",
            "aws_lb_target_group.lab04-alb-target-group",
            "aws_security_group.lab04-secgroup-1",
            "aws_security_group.lab04-secgroup-2",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab04-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/4e6a284f5810d530",
            "arn_suffix": "targetgroup/lab04-alb-target-group/4e6a284f5810d530",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:848587260896:targetgroup/lab04-alb-target-group/4e6a284f5810d530",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab04-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab04-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0886978a1b2c70fef",
            "connectivity_type": "public",
            "id": "nat-008fe7e7e540861cf",
            "network_interface_id": "eni-04b35c69bd0269401",
            "private_ip": "10.0.0.72",
            "public_ip": "13.213.177.90",
            "subnet_id": "subnet-02f1c37fbbe36d1e4",
            "tags": {
              "Name": "lab04-natgw-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "lab04-natgw-ap-southeast-1a"
            }
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001fa93c238ad15db",
            "connectivity_type": "public",
            "id": "nat-0f7fe06aee6b58ba8",
            "network_interface_id": "eni-0ab824da2a585f663",
            "private_ip": "10.0.1.89",
            "public_ip": "13.215.242.138",
            "subnet_id": "subnet-07d6f6e03c9283169",
            "tags": {
              "Name": "lab04-natgw-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "lab04-natgw-ap-southeast-1b"
            }
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7641fb4c8ea117a",
            "connectivity_type": "public",
            "id": "nat-054736f740b662ac4",
            "network_interface_id": "eni-06b431e533a1a9f8b",
            "private_ip": "10.0.2.139",
            "public_ip": "18.143.7.158",
            "subnet_id": "subnet-06ba41c814e38bd3e",
            "tags": {
              "Name": "lab04-natgw-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "lab04-natgw-ap-southeast-1c"
            }
          },
          "dependencies": [
            "aws_eip.lab04-eip-nat",
            "aws_internet_gateway.lab04-igw",
            "aws_subnet.lab04-public-subnet",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab04-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0343673614cf7b381",
            "id": "rtb-0343673614cf7b381",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-008fe7e7e540861cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "lab04-rt-private-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0e215830a203979e0",
            "id": "rtb-0e215830a203979e0",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f7fe06aee6b58ba8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "lab04-rt-private-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0f1f71e97e38372ee",
            "id": "rtb-0f1f71e97e38372ee",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-054736f740b662ac4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-private-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "lab04-rt-private-ap-southeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab04-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0c2a8a755a0b628c8",
            "id": "rtb-0c2a8a755a0b628c8",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abd03b95403a778e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab04-rt-public"
            },
            "tags_all": {
              "Name": "lab04-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab04-igw",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3d3362cb1b370eb",
            "route_table_id": "rtb-0343673614cf7b381",
            "subnet_id": "subnet-0461d695d3f32a8d7"
          },
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_route_table.lab04-rt-private",
            "aws_subnet.lab04-private-subnet",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e596c10c6d1caa",
            "route_table_id": "rtb-0e215830a203979e0",
            "subnet_id": "subnet-073703ca385d90aec"
          },
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_route_table.lab04-rt-private",
            "aws_subnet.lab04-private-subnet",
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035d8f517aa3e5fc1",
            "route_table_id": "rtb-0f1f71e97e38372ee",
            "subnet_id": "subnet-0b2e94adc05022505"
          },
          "dependencies": [
            "aws_nat_gateway.lab04-natgw",
            "aws_route_table.lab04-rt-private",
            "aws_subnet.lab04-private-subnet",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab04-route-assoc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f74195288bfe765a",
            "route_table_id": "rtb-0c2a8a755a0b628c8",
            "subnet_id": "subnet-02f1c37fbbe36d1e4"
          },
          "dependencies": [
            "aws_route_table.lab04-rt-public",
            "aws_subnet.lab04-public-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c92c617dad24c05",
            "route_table_id": "rtb-0c2a8a755a0b628c8",
            "subnet_id": "subnet-07d6f6e03c9283169"
          },
          "dependencies": [
            "aws_route_table.lab04-rt-public",
            "aws_subnet.lab04-public-subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00011bf015dedefab",
            "route_table_id": "rtb-0c2a8a755a0b628c8",
            "subnet_id": "subnet-06ba41c814e38bd3e"
          },
          "dependencies": [
            "aws_route_table.lab04-rt-public",
            "aws_subnet.lab04-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab04-secgroup-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-0514962f1213241b7",
            "description": "Allow web server network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0514962f1213241b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTP from anywhere, through the ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "180.190.52.180/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab04-secgroup-1",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab04-secgroup-1"
            },
            "tags_all": {
              "Name": "lab04-secgroup-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab04-secgroup-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-0d99ed8b73fc04643",
            "description": "Allow ALB network traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0514962f1213241b7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d99ed8b73fc04643",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab04-secgroup-2",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab04-secgroup-1"
            },
            "tags_all": {
              "Name": "lab04-secgroup-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab04-secgroup-1",
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0461d695d3f32a8d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0461d695d3f32a8d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-private-subnet-ap-southeast-1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-private-subnet-ap-southeast-1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-073703ca385d90aec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073703ca385d90aec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-private-subnet-ap-southeast-1b",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-private-subnet-ap-southeast-1b",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0b2e94adc05022505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2e94adc05022505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-private-subnet-ap-southeast-1c",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-private-subnet-ap-southeast-1c",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab04-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-02f1c37fbbe36d1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1c37fbbe36d1e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-public-subnet-ap-southeast-1a",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-public-subnet-ap-southeast-1a",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-07d6f6e03c9283169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d6f6e03c9283169",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-public-subnet-ap-southeast-1b",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-public-subnet-ap-southeast-1b",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-06ba41c814e38bd3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba41c814e38bd3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab04-public-subnet-ap-southeast-1c",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab04-public-subnet-ap-southeast-1c",
              "Type": "Public"
            },
            "vpc_id": "vpc-03d74d1e4c0e55081"
          },
          "dependencies": [
            "aws_vpc.lab04-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab04-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:vpc/vpc-03d74d1e4c0e55081",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b80f19150abb8f93",
            "default_route_table_id": "rtb-0115b3942f76389b1",
            "default_security_group_id": "sg-0dc05c5d5410ab93c",
            "dhcp_options_id": "dopt-7f272c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d74d1e4c0e55081",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0115b3942f76389b1",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab04-vpc"
            },
            "tags_all": {
              "Name": "lab04-vpc"
            }
          }
        }
      ]
    }
  ]
}